--- a/src/components/login/logIn.css
+++ b/src/components/login/logIn.css
@@ -59,3 +59,26 @@
 .flippy-front, .flippy-back {
     box-shadow: 0 0 black !important;
 }
+
+.field-icon {
+    float: right;
+    margin-left: -25px;
+    margin-top: -25px;
+    position: relative;
+    z-index: 2;
+}
+
+/* new button css for flip */
+.toggle_button {
+    display: inline-flex;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.54);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 2px 0px, rgba(0, 0, 0, 0.24) 0px 0px 1px 0px;
+    padding: 11px 7px 6px !important;
+    border-radius: 2px;
+    border: 1px solid transparent;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: Roboto, sans-serif;
+    opacity: 0.6;
+}
